pbc_contract_codegen/tests/action/fail/empty_action.stderr
error: custom attribute panicked
 --> tests/action/fail/empty_action.rs:4:1
  |
4 | #[action]
  | ^^^^^^^^^
  |
  = help: message: Functions annotated with this macro must have at least 2 arguments, but had only 0
